# capnproto-custom-encryption

./: AsyncIoStreamWrapper.h  EncryptedConnection.h  EncryptionCommon.h  InsecureChannel.h  IoStream.h  JpakeChannel.h  PubkeyChannel.h  README.org  SodiumCipherStream.cpp  SodiumCipherStream.h  custom-rpc.cpp  meson.build  messages.capnp
test/: Channel-test.cpp  EncryptedConnection-test.cpp  EncryptionCommon-test.cpp  InsecureChannel-test.cpp  SodiumCipherStream-test.cpp  meson.build  test.capnp  test_util.h
